# astel-task

./: .env.temp  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  run.sh
astel/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
summarizer/: admin.py  apps.py  models.py
summarizer/logging/models/: musix.py  openai.py
summarizer/lyrics/admins/: song.py
summarizer/lyrics/models/: country.py  song.py
summarizer/lyrics/serializers/: musix_song.py
summarizer/management/commands/: startresource.py
summarizer/migrations/: 0001_initial.py  0002_alter_country_options_alter_lyrics_body_and_more.py  0003_delete_lyrics.py  0004_request.py  0005_request_user.py  0006_request_errors_alter_request_status.py  0007_song_summary.py  0008_song_status_alter_request_status_alter_song_rating.py  0009_gptlog_musixlog.py  0010_auto_20240627_1325.py
summarizer/requests/admins/: request.py
summarizer/requests/models/: request.py
summarizer/requests/signals/: request.py
summarizer/requests/tasks/: Dockerfile  get_lyrics.py
utils/pagination/: custom.py
