[tool.poetry]
name = "astel-task"
version = "0.1.0"
description = ""
authors = ["Kuldeep Pisda <kdpisda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
gevent = "^24.2.1"
django-auditlog = "^3.0.0"
djangorestframework-simplejwt = "^5.3.1"
drf-standardized-errors = "^0.14.0"
celery = "^5.4.0"
django-celery-results = "^2.5.1"
drf-spectacular = "^0.27.2"
django-cors-headers = "^4.4.0"
requests = "^2.32.3"
openai = "^1.35.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
